Ajout du mode spectateur en fin de partie

--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@
             <div class="victory-text">
                 Félicitations ! Vous avez créé votre première graine sociale !<br>
                 Votre village prend vie et vos habitants commencent à peupler les lieux.<br><br>
-                <strong>Fin de la démo - Merci d'avoir joué à Project Villager !</strong>
+                <strong>Fin de la démo - Merci d'avoir joué à Project Villager !</strong><br>
+                <i>Cliquez sur cette fenêtre pour la fermer et regarder votre village!</i>
             </div>
         </div>
     </div>
